--- a/main/Jenkinsfile
+++ b/main/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: 'github-credentials', usernameVariable: 'GITHUB_USER', passwordVariable: 'GITHUB_TOKEN')]) {
                         git url: 'https://github.com/Angeldedios23/Proyecto-Tienda.git',
-                            branch: 'main',
+                            branch: 'master'
                             credentialsId: 'github-credentials'
                     }
                 }
