--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
 # Usa una versión de Node.js que soporte el operador de asignación nula
 FROM node:14.6.0
 
-# Establece el directorio de trabajo
-WORKDIR /app
+# Establece el directorio de trabajo dentro del contenedor
+WORKDIR /usr/src/app
 
-# Copia los archivos de package y package-lock
+# Copia los archivos de package y package-lock primero para aprovechar el caché de Docker
 COPY package*.json ./
 
 # Instala las dependencias del proyecto
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 # Expone el puerto que usa la aplicación
-EXPOSE 3000
+EXPOSE 3001
 
 # Comando para iniciar la aplicación
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
